--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.446.0",
     "next": "^14.2.14",
     "pg": "^8.13.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-day-picker": "^9.1.4",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
