--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.446.0",
     "next": "^14.2.14",
     "pg": "^8.13.0",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
