Improved the Delete User warning message.  Removed Reset Accounts option from Global App Settings page. Improved text regarding actual results of Resting Transaction History. Improved text regarding actual results of Resetting Users.

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 /out/
 .next/cache/
 
-
 # production
 /build
 
@@ -39,6 +38,14 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# Husky
-.husky/_
-.husky.sh
+# Database
+*.sql
+
+# IDEs and editors
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+Thumbs.db
