--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"],
+  "extends": ["next/core-web-vitals", "next/typescript", "plugin:prettier/recommended"],
   "rules": {
     "quotes": ["error", "single", { "avoidEscape": true }]
   },
