refactor: improve task layout and standardize code formatting
Layout Changes:
- Remove ScrollArea component and fixed height constraint in TaskManagement
- Let grid layout naturally handle content height
- Maintain consistent styling with UserManagement component
- Clean up unnecessary wrapper elements

Code Style Standardization:
- Configure Prettier with single quotes and consistent formatting rules
- Update ESLint to work harmoniously with Prettier
- Add npm scripts for formatting and linting
- Fix TypeScript version to 5.0.4 for tool compatibility

This change improves the visual consistency of the task management view
while establishing a standardized code formatting across the codebase.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "format": "prettier --write .",
+    "lint": "prettier --write . && next lint",
     "lint:dir": "next lint app components"
   },
   "dependencies": {
@@ -52,6 +53,6 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.5.6"
+    "typescript": "5.0.4"
   }
 }
