Added docker support.  Docker-compose.  Prod and Dev.  2 containers - one for the app, the other for the db

--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,15 @@
 NODE_ENV=development
 NEXT_PUBLIC_PORT=21971
 
-# Database
+# Database Configuration
+DB_HOST=db           # Use 'db' for Docker, or your external database host
+DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=your_secure_password
 DB_DATABASE=tgeld
-DB_HOST=localhost
-DB_PORT=5432
 
-# Storage
-UPLOAD_PATH=./uploads
+# Upload Configuration
+UPLOAD_PATH=/app/uploads  # Docker container path for uploads
 
 # Feature Flags
 ENABLE_ANALYTICS=false
