--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "format": "prettier --write .",
     "lint": "prettier --write . && next lint",
     "lint:dir": "next lint app components",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "check": "tsc --noEmit && npm run lint:dir && npm run format"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@prisma/client": "^6.3.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
@@ -35,6 +35,7 @@
     "lucide-react": "^0.446.0",
     "next": "^14.2.14",
     "pg": "^8.13.0",
+    "prisma": "^6.3.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^9.1.4",
@@ -43,10 +44,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
     "@types/canvas-confetti": "^1.6.4",
     "@types/file-saver": "^2.0.7",
-    "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -55,11 +54,9 @@
     "eslint-config-next": "14.2.13",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.2.5",
-    "typescript": "5.0.4"
+    "typescript": "^5.7.3"
   }
 }
