--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ NEXT_PUBLIC_PORT=21971
 DB_HOST=db           # Use 'db' for Docker, or your external database host
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=your_secure_password
+DB_PASSWORD=your_secure_password_here
 DB_DATABASE=tgeld
 
 # Upload Configuration
@@ -15,3 +15,12 @@ UPLOAD_PATH=/app/uploads  # Docker container path for uploads
 # Feature Flags
 ENABLE_ANALYTICS=false
 ENABLE_BACKUP=true
+
+# Note: When setting up for production:
+# 1. Create a copy of this file named .env
+# 2. Replace the password with a secure one
+# 3. Minimum password requirements:
+#    - At least 12 characters
+#    - Mix of uppercase and lowercase letters
+#    - Numbers and special characters
+#    - Avoid special characters that need escaping in URLs
