Docker production setup and Next.js API improvements
- Added production Docker configuration with standalone mode
- Fixed Next.js API routes in Docker environment
- Added dynamic route configuration for proper data fetching
- Updated server configuration to listen on all interfaces
- Reorganized documentation structure
- Added deployment plan and documentation
- Added database migration scripts
- Updated environment configuration

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,50 @@
-# Application
-NODE_ENV=development
+# Application Settings
+NODE_ENV=development        # Use 'development' for local dev, 'production' for deployment
 NEXT_PUBLIC_PORT=21971
 
 # Database Configuration
-DB_HOST=db           # Use 'db' for Docker, or your external database host
+DB_HOST=localhost          # Use 'localhost' for local dev, 'db' for Docker
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=your_secure_password_here
+DB_PASSWORD=change_this_to_a_secure_password
 DB_DATABASE=tgeld
 
-# Upload Configuration
-UPLOAD_PATH=/app/uploads  # Docker container path for uploads
+# Database Connection URL (used by Prisma)
+DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}
+
+# File Storage
+UPLOAD_PATH=./uploads     # Use './uploads' for local dev, '/app/uploads' for Docker
 
 # Feature Flags
 ENABLE_ANALYTICS=false
 ENABLE_BACKUP=true
 
-# Note: When setting up for production:
-# 1. Create a copy of this file named .env
-# 2. Replace the password with a secure one
-# 3. Minimum password requirements:
-#    - At least 12 characters
+# Security Settings
+SESSION_SECRET=change_this_to_a_secure_random_string
+
+# ==============================================
+# Environment Setup Instructions
+# ==============================================
+#
+# For Local Development:
+# 1. Copy this file: cp .env.example .env.local
+# 2. Keep NODE_ENV=development
+# 3. Use DB_HOST=localhost
+# 4. Use UPLOAD_PATH=./uploads
+#
+# For Production Docker:
+# 1. Copy this file: cp .env.example .env
+# 2. Set NODE_ENV=production
+# 3. Set DB_HOST=db
+# 4. Set UPLOAD_PATH=/app/uploads
+#
+# Security Requirements:
+# 1. Never commit .env files to version control
+# 2. Password Requirements:
+#    - Minimum 12 characters
 #    - Mix of uppercase and lowercase letters
-#    - Numbers and special characters
-#    - Avoid special characters that need escaping in URLs
+#    - Include numbers and special characters
+#    - Avoid characters that need URL escaping
+#
+# Directory Setup:
+# - Ensure the UPLOAD_PATH directory exists and is writable
