--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,53 @@
-# Production configuration for tgeld
-# Single container with Next.js, PostgreSQL, and Prisma
-version: '3.8'
-
 services:
+  db:
+    image: postgres:16-alpine
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_DATABASE}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "${DB_PORT}:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_DATABASE}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   app:
     build:
       context: .
       dockerfile: Dockerfile.prod
+    environment:
+      NODE_ENV: production
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_DATABASE: ${DB_DATABASE}
+      DATABASE_URL: postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_DATABASE}?schema=public
+      UPLOAD_PATH: ${UPLOAD_PATH:-/app/uploads}
+      SESSION_SECRET: ${SESSION_SECRET:-default_dev_secret}
     ports:
-      - '21971:21971'  # Next.js
-      - '5432:5432'    # PostgreSQL (optional, comment out if not needed)
+      - "3000:3000"
+    depends_on:
+      db:
+        condition: service_healthy
     volumes:
       - uploads:/app/uploads
-      - db:/var/lib/postgresql/data
-    environment:
-      # Production environment variables
-      - NODE_ENV=production
-      - NEXT_PUBLIC_PORT=21971
-      # Database configuration (internal)
-      - DB_HOST=localhost
-      - DB_PORT=5432
-      - DB_USER=postgres
-      - DB_PASSWORD=${DB_PASSWORD:-tgeld_secure_password_2024}
-      - DB_DATABASE=tgeld
-      # Prisma database URL
-      - DATABASE_URL=postgresql://postgres:${DB_PASSWORD:-tgeld_secure_password_2024}@localhost:5432/tgeld?schema=public
+    command: >
+      sh -c "
+        npx prisma migrate deploy &&
+        node server.js
+      "
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres && wget --spider http://localhost:21971/api/health"]
-      interval: 30s
-      timeout: 10s
+      test: ["CMD", "wget", "--spider", "http://localhost:3000"]
+      interval: 10s
+      timeout: 5s
       retries: 3
-      start_period: 40s
+      start_period: 5s
 
 volumes:
+  postgres_data:
   uploads:
-  db:
