--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,41 @@
 services:
   db:
     image: postgres:16-alpine
+    restart: always
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_DATABASE}
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=tgeld_secure_password_2024
+      - POSTGRES_DB=tgeld
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "${DB_PORT}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_DATABASE}"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d tgeld"]
       interval: 5s
       timeout: 5s
       retries: 5
 
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile.prod
-    environment:
-      NODE_ENV: production
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_DATABASE: ${DB_DATABASE}
-      DATABASE_URL: postgresql://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_DATABASE}?schema=public
-      UPLOAD_PATH: ${UPLOAD_PATH:-/app/uploads}
-      SESSION_SECRET: ${SESSION_SECRET:-default_dev_secret}
+    image: tgeld/tgeld:latest
+    restart: always
     ports:
       - "3000:3000"
+    environment:
+      - DATABASE_URL=postgresql://postgres:tgeld_secure_password_2024@db:5432/tgeld?schema=public
+      - NODE_ENV=production
+      - NEXT_PUBLIC_PORT=21971
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=tgeld_secure_password_2024
+      - DB_DATABASE=tgeld
+      - UPLOAD_PATH=/app/uploads
+    volumes:
+      - uploads:/app/uploads
     depends_on:
       db:
         condition: service_healthy
-    volumes:
-      - uploads:/app/uploads
-    command: >
-      sh -c "
-        npx prisma migrate deploy &&
-        node server.js
-      "
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:3000"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
-      start_period: 5s
 
 volumes:
   postgres_data:
