docs: reorganize documentation for production and development

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,20 @@
-# Application Settings
-NODE_ENV=development        # Use 'development' for local dev, 'production' for deployment
-NEXT_PUBLIC_PORT=21971
+# Development Environment Configuration
 
-# Database Configuration
-DB_HOST=localhost          # Use 'localhost' for local dev, 'db' for Docker
+# Node environment
+NODE_ENV=development
+
+# Database Configuration (for local development)
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=change_this_to_a_secure_password
+DB_PASSWORD=your_local_password
 DB_DATABASE=tgeld
 
 # Database Connection URL (used by Prisma)
 DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}
 
 # File Storage
-UPLOAD_PATH=./uploads     # Use './uploads' for local dev, '/app/uploads' for Docker
+UPLOAD_PATH=./uploads
 
 # Feature Flags
 ENABLE_ANALYTICS=false
@@ -31,12 +32,6 @@ SESSION_SECRET=change_this_to_a_secure_random_string
 # 2. Keep NODE_ENV=development
 # 3. Use DB_HOST=localhost
 # 4. Use UPLOAD_PATH=./uploads
-#
-# For Production Docker:
-# 1. Copy this file: cp .env.example .env
-# 2. Set NODE_ENV=production
-# 3. Set DB_HOST=db
-# 4. Set UPLOAD_PATH=/app/uploads
 #
 # Security Requirements:
 # 1. Never commit .env files to version control
