--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,11 @@ services:
       - POSTGRES_PASSWORD=tgeld_secure_password_2024
       - POSTGRES_DB=tgeld
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d tgeld"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres -d tgeld']
       interval: 5s
       timeout: 5s
       retries: 5
@@ -20,7 +20,7 @@ services:
     image: tgeld/tgeld:latest
     restart: always
     ports:
-      - "3000:3000"
+      - '3000:3000'
     environment:
       - DATABASE_URL=postgresql://postgres:tgeld_secure_password_2024@db:5432/tgeld?schema=public
       - NODE_ENV=production
