--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,42 +1,24 @@
-services:
-  db:
-    image: postgres:16-alpine
-    restart: always
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=tgeld_secure_password_2024
-      - POSTGRES_DB=tgeld
-    ports:
-      - '5432:5432'
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres -d tgeld']
-      interval: 5s
-      timeout: 5s
-      retries: 5
+version: '3.8'
 
+services:
   app:
     image: tgeld/tgeld:latest
-    restart: always
     ports:
-      - '3000:3000'
+      - "3000:3000"
     environment:
-      - DATABASE_URL=postgresql://postgres:tgeld_secure_password_2024@db:5432/tgeld?schema=public
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/tgeld
       - NODE_ENV=production
-      - NEXT_PUBLIC_PORT=21971
-      - DB_HOST=db
-      - DB_PORT=5432
-      - DB_USER=postgres
-      - DB_PASSWORD=tgeld_secure_password_2024
-      - DB_DATABASE=tgeld
-      - UPLOAD_PATH=/app/uploads
-    volumes:
-      - uploads:/app/uploads
     depends_on:
-      db:
-        condition: service_healthy
+      - db
+
+  db:
+    image: postgres:16-alpine
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=tgeld
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
 volumes:
   postgres_data:
-  uploads:
