refactor: improve settings and documentation
- Remove obsolete DEPLOYMENT_PLAN.md
- Update README files with clearer instructions
- Enhance currency and language settings API routes
- Improve language context implementation
- Update package dependencies

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "check": "tsc --noEmit && npm run lint:dir && npm run format",
     "docker:cleanup": "scripts/docker-cleanup.sh",
     "docker:cleanup:all": "scripts/docker-cleanup.sh --all",
-    "prebuild": "test \"$SKIP_CLEANUP\" = \"true\" || npm run docker:cleanup"
+    "prebuild": "test \"$SKIP_CLEANUP\" = \"true\" || npm run docker:cleanup",
+    "dev:docker": "docker compose -f docker-compose.dev.yml up --build",
+    "dev:docker:clean": "docker compose -f docker-compose.dev.yml down -v && npm run dev:docker"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
